# Multimodal-State-Conditioned-VLA-for-Tabletop-Block-Assembly

./: .env  .env.example  .gitignore  README.md  calibrate_dual_view.py  pyproject.toml  real_eval.py  real_vision.py  sim_eval.py  sim_eval_seed0_episodes30.json  sim_scenes.py  sim_vlm_eval_seed0_n30.json  sim_vlm_to_actions_eval.py  vla_adapter.py  vla_to_actions.py  vlm_to_actions.py
gym_so100/: __init__.py  constants.py  env.py  utils.py
gym_so100/assets/: scene_so100.xml  so100_puzzle.xml  so100_transfer_cube.xml
gym_so100/assets/trs_so_arm100/: CHANGELOG.md  README.md  WRIST_ROLL_MAPPING.md  scene.xml  so_arm100.xml  so_arm100_ee.xml  so_arm100_puzzle.xml
gym_so100/tasks/: single_arm.py
gym_so100/teleop/: gamepad_utils.py
gym_so100_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
runs/: vlm_eval.json  vlm_eval_handoff_smoke.json  vlm_eval_render_handoff_fix.json  vlm_eval_render_smoke.json  vlm_eval_smoke.json  vlm_eval_test.json
tests/: test_constants.py  test_env.py
