[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Multimodal-State-Conditioned-VLA-for-Tabletop-Block-Assembly"
version = "0.1.0"
description = "Multimodal state-conditioned VLA for tabletop block assembly: SO-ARM100 MuJoCo sim + optional XVLA/VLM closed-loop eval (Gymnasium, 3×3 pick-place)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.24",
  "mujoco>=3.0",
  "gymnasium>=1.0",
  "dm-control>=1.0",
  "mink>=0.0.1",
  "imageio>=2.34.0",
  "torch>=2.1",
  "lerobot[transformers-dep]>=0.4.0",
  "python-dotenv>=1.0.0",
  "imageio-ffmpeg>=0.5.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gym_so100*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py310"
